--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,5 +30,5 @@ body{
     align-items: center;
     justify-content: center;
     text-align: center;
-    color: #ffffff;
+    color: #000000;
 }
