--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,4 @@
-body{
-    background: #282828;
+body{    
     position: absolute;
     top: 0%;
     bottom: 0%;
@@ -10,15 +9,15 @@ body{
     flex-wrap: wrap;
     justify-content: normal;
     align-content: flex-start;
+    background-color: #2f2f2f;
+    background: #2f2f2f;
 }
 
 #text{
     position: relative;
 
     top: 20%;
-    bottom: 80%;
-    left: 43%;
-    right: 57%;
+    bottom: 80%;  
 
     align-self: center;
 
@@ -30,5 +29,5 @@ body{
     align-items: center;
     justify-content: center;
     text-align: center;
-    color: #000000;
+    color: #ffffff;
 }
