--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-body{    
+/* body{    
     position: absolute;
     top: 0%;
     bottom: 0%;
@@ -11,7 +11,7 @@ body{
     align-content: flex-start;
     background-color: #2f2f2f;
     background: #2f2f2f;
-}
+} */
 
 #text{
     position: relative;
